# segfault_database

./: .env  .gitignore  Cargo.toml  README.md  install.sh  sfdb.service  sfdb_TYPESIMPLE.service  sfdb_server.sh
migrations/2020-04-11-231508_create_users/: up.sql
migrations/2020-04-16-170919_create_api_users/: down.sql  up.sql
migrations/2020-04-16-171256_create_stats_seasons_history/: down.sql  up.sql
migrations/2020-04-20-235207_create_leaderboard_procedure/: down.sql  up.sql
migrations/2020-04-22-182455_create_discord_user_blacklist/: down.sql  up.sql
scripts/: catch_sig_example.sh  ecosystem.config.example.js  pm2_start.sh  sfdb_arn.sh  sfdb_aru.sh  sfdb_graceful.sh  sfdb_pm2.sh  sfdb_pm2_env.sh  sfdb_run.sh
src/: main.rs  rws.rs
src/database/: lib.rs  models.rs  schema.rs
src/database/sql/: create_procedure.sql  getrank.sql  leaderboard.sql  playerrank.sql
