[package]
name = "segfault_database"
version = "1.0.0"
authors = ["Connor <connor.postma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
env_logger = "0.7"
actix-rt = "1.1"
diesel = { version = "1.4", features = ["mysql","r2d2"] }
r2d2 = "0.8"
dotenv = "0.15"
serde = "1.0"
#envconfig = "0.8"
#envconfig_derive = "0.8"

[lib]
name = "sfdb_connect"
path = "src/database/lib.rs"

[[bin]]
name = "sfdb"
path = "src/main.rs"